fix(x-sync): long character name overflow issues

--- a/shared/styles/globals.css
+++ b/shared/styles/globals.css
@@ -35,6 +35,7 @@ a {
 	background: #000;
 	opacity: 0;
 	transition: opacity 0.2s;
+	pointer-events: none;
 }
 
 .ux-overlay:hover::after {
